adding new folder Data Cleaning & Preprocessing

--- a/Pandas/Data Selection & Filtering.ipynb
+++ b/Pandas/Data Selection & Filtering.ipynb
@@ -458,9 +458,447 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c77a3816-d5a7-41dd-b934-11c9834d0a9c",
+   "metadata": {},
+   "source": [
+    "## Fast Access"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4f153b54-5e7a-4468-8446-2f49dc87c76c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Shah Rukh Khan'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.at[0, \"Actor\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6daa51ed-b169-4195-a3b9-b20930383432",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pathaan'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iat[0, 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a6d4be4-7dba-4f96-bfa3-6ed95716831f",
+   "metadata": {},
+   "source": [
+    "## Filtering With Conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cd731b76-f908-4b66-8349-2b42218e6dde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Actor</th>\n",
+       "      <th>Film</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>BoxOffice(INR Crore)</th>\n",
+       "      <th>IMDb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Shah Rukh Khan</td>\n",
+       "      <td>Pathaan</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>7.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aamir Khan</td>\n",
+       "      <td>Dangal</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Biography</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>8.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Ayushmann Khurrana</td>\n",
+       "      <td>Andhadhun</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Thriller</td>\n",
+       "      <td>111</td>\n",
+       "      <td>8.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Rajkummar Rao</td>\n",
+       "      <td>Stree</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Horror Comedy</td>\n",
+       "      <td>180</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Vicky Kaushal</td>\n",
+       "      <td>Uri: The Surgical Strike</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>342</td>\n",
+       "      <td>8.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Actor                      Film  Year          Genre  \\\n",
+       "0       Shah Rukh Khan                   Pathaan  2023         Action   \n",
+       "2           Aamir Khan                    Dangal  2016      Biography   \n",
+       "5   Ayushmann Khurrana                 Andhadhun  2018       Thriller   \n",
+       "6        Rajkummar Rao                     Stree  2018  Horror Comedy   \n",
+       "11       Vicky Kaushal  Uri: The Surgical Strike  2019         Action   \n",
+       "\n",
+       "    BoxOffice(INR Crore)  IMDb  \n",
+       "0                   1050   7.2  \n",
+       "2                   2024   8.4  \n",
+       "5                    111   8.3  \n",
+       "6                    180   7.5  \n",
+       "11                   342   8.2  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"IMDb\"]>7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5768f274-1b52-4dc1-b32e-f4c94ac480f7",
+   "metadata": {},
+   "source": [
+    "## Multiple Condition (AND/OR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "04844e09-a765-4e61-a4a5-ba94c7762b15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Actor</th>\n",
+       "      <th>Film</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>BoxOffice(INR Crore)</th>\n",
+       "      <th>IMDb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Shah Rukh Khan</td>\n",
+       "      <td>Pathaan</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>7.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Ayushmann Khurrana</td>\n",
+       "      <td>Andhadhun</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Thriller</td>\n",
+       "      <td>111</td>\n",
+       "      <td>8.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Rajkummar Rao</td>\n",
+       "      <td>Stree</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Horror Comedy</td>\n",
+       "      <td>180</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Vicky Kaushal</td>\n",
+       "      <td>Uri: The Surgical Strike</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>342</td>\n",
+       "      <td>8.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Actor                      Film  Year          Genre  \\\n",
+       "0       Shah Rukh Khan                   Pathaan  2023         Action   \n",
+       "5   Ayushmann Khurrana                 Andhadhun  2018       Thriller   \n",
+       "6        Rajkummar Rao                     Stree  2018  Horror Comedy   \n",
+       "11       Vicky Kaushal  Uri: The Surgical Strike  2019         Action   \n",
+       "\n",
+       "    BoxOffice(INR Crore)  IMDb  \n",
+       "0                   1050   7.2  \n",
+       "5                    111   8.3  \n",
+       "6                    180   7.5  \n",
+       "11                   342   8.2  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df[\"IMDb\"] >7) & (df[\"Year\"]>2017)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ea3226f-1b4c-4463-b935-546ef68a9302",
+   "metadata": {},
+   "source": [
+    "## Querying with .queary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bfb92dfb-bde3-4453-948c-eab1aa381a43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Actor</th>\n",
+       "      <th>Film</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>BoxOffice(INR Crore)</th>\n",
+       "      <th>IMDb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Vicky Kaushal</td>\n",
+       "      <td>Uri: The Surgical Strike</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>342</td>\n",
+       "      <td>8.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Actor                      Film  Year   Genre  \\\n",
+       "11  Vicky Kaushal  Uri: The Surgical Strike  2019  Action   \n",
+       "\n",
+       "    BoxOffice(INR Crore)  IMDb  \n",
+       "11                   342   8.2  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.query(\"IMDb > 8 and Year > 2018\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c84dfa44-e85e-438e-9ef4-1f8869d91ade",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Actor</th>\n",
+       "      <th>Film</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>BoxOffice(INR Crore)</th>\n",
+       "      <th>IMDb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aamir Khan</td>\n",
+       "      <td>Dangal</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Biography</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>8.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Ayushmann Khurrana</td>\n",
+       "      <td>Andhadhun</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Thriller</td>\n",
+       "      <td>111</td>\n",
+       "      <td>8.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Vicky Kaushal</td>\n",
+       "      <td>Uri: The Surgical Strike</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>342</td>\n",
+       "      <td>8.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Actor                      Film  Year      Genre  \\\n",
+       "2           Aamir Khan                    Dangal  2016  Biography   \n",
+       "5   Ayushmann Khurrana                 Andhadhun  2018   Thriller   \n",
+       "11       Vicky Kaushal  Uri: The Surgical Strike  2019     Action   \n",
+       "\n",
+       "    BoxOffice(INR Crore)  IMDb  \n",
+       "2                   2024   8.4  \n",
+       "5                    111   8.3  \n",
+       "11                   342   8.2  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col = \"IMDb\"\n",
+    "df.query(f\"{col} > 8\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1777c025-1583-4053-a97b-ffdf49de643f",
+   "id": "a63aef5c-1a7f-40da-9987-7b11a3c4b5a5",
    "metadata": {},
    "outputs": [],
    "source": []
