--- a/Pandas/Data Cleaning & Preprocessing.ipynb
+++ b/Pandas/Data Cleaning & Preprocessing.ipynb
@@ -1612,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "ec8ad9ba-2975-4ad7-9078-73eaa20d5833",
    "metadata": {},
    "outputs": [
@@ -1623,15 +1623,15 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 5 entries, 0 to 7\n",
       "Data columns (total 6 columns):\n",
-      " #   Column     Non-Null Count  Dtype         \n",
-      "---  ------     --------------  -----         \n",
-      " 0   Name       5 non-null      object        \n",
-      " 1   Age        5 non-null      int64         \n",
-      " 2   City       5 non-null      object        \n",
-      " 3   Gender     5 non-null      object        \n",
-      " 4   Email      5 non-null      object        \n",
-      " 5   Join Date  5 non-null      datetime64[ns]\n",
-      "dtypes: datetime64[ns](1), int64(1), object(4)\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   Name       5 non-null      object\n",
+      " 1   Age        5 non-null      int64 \n",
+      " 2   City       5 non-null      object\n",
+      " 3   Gender     5 non-null      object\n",
+      " 4   Email      5 non-null      object\n",
+      " 5   Join Date  5 non-null      object\n",
+      "dtypes: int64(1), object(5)\n",
       "memory usage: 280.0+ bytes\n"
      ]
     }
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "af5b1ed4-7aad-4ed7-9972-236d30d0701a",
    "metadata": {},
    "outputs": [],
@@ -1652,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "73c1bb2b-fc80-4e47-83ab-828738cc5a5f",
    "metadata": {},
    "outputs": [
@@ -1744,7 +1744,7 @@
        "7  Alice   25     New York      F  alice@example.com 2021-01-05"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1755,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "883dc065-f10e-4253-99f9-0919c5204a77",
    "metadata": {},
    "outputs": [],
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "16bd7a47-ff03-4142-998f-b73b5cf22433",
    "metadata": {},
    "outputs": [
@@ -1863,7 +1863,7 @@
        "7  Alice   25     New York      F  alice@example.com 2021-01-05      Adult"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1874,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "id": "216062f4-2eda-4b3f-ad51-ffd109e97563",
    "metadata": {},
    "outputs": [],
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "id": "e660ca75-28ba-4c9e-a5ae-eb7e8a64e2fc",
    "metadata": {},
    "outputs": [
@@ -1983,7 +1983,7 @@
        "7  Alice   25     New York  Female  alice@example.com 2021-01-05      Adult"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
