Adding new files in Matplotlib

--- a/Matplotlib/Scatter Plots.ipynb
+++ b/Matplotlib/Scatter Plots.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75edc0a7-8c99-4b0f-b842-18ad7b1c3f57",
+   "id": "ae25aad3-7d74-4b19-aa49-23c8a33b1d09",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,9 +11,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
